--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -1,4 +1,3 @@
-@import "./_swiper.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -46,4 +45,73 @@
   border-color: transparent;
   border-right-color: black;
   border-bottom-color: black;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 24px;
+}
+
+.mySwiper .swiper-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mySwiper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 262px;
+  object-fit: cover;
+  filter: grayscale(1);
+}
+
+.mySwiper .swiper-slide-active img {
+  height: 439px;
+  filter: none;
+}
+
+@media (min-width: 960px) {
+  .mySwiper .swiper {
+    padding-bottom: 24px;
+  }
+
+  .mySwiper .swiper-slide-prev {
+    flex-basis: 25%;
+    padding-right: 12px;
+  }
+  .mySwiper .swiper-slide-next {
+    flex-basis: 25%;
+    padding-left: 12px;
+  }
+  .mySwiper .swiper-slide-active {
+    flex-basis: 50%;
+    padding: 0 12px;
+  }
+  .mySwiper .swiper-slide-active img {
+    filter: none;
+  }
+
+  .mySwiper .swiper-slide .blurContent {
+    display: none;
+  }
+
+  .mySwiper .swiper-slide-active .blurContent {
+    display: block;
+  }
+
+  .mySwiper .swiper-horizontal>.swiper-pagination-bullets {
+    bottom: 0;
+  }
+}
+
+.swiper-pagination-bullets .swiper-pagination-bullet {
+  opacity: 1;
+  border-radius: 0;
+}
+
+.swiper-pagination-bullets .swiper-pagination-bullet-active {
+  width: 16px;
+  background-color: #e6553b;
 }
